--- a/views/configure.html
+++ b/views/configure.html
@@ -70,14 +70,14 @@
             </form>
         </div>
 
-        <footer class="footer">
+        <!-- <footer class="footer">
             <div class="container-fluid">
                 <div class="row">
                     <p class="col-xs-10 text-muted">Graphic interface for ODAS library</p>
                     <a id="close-button" class="col-xs-2 text-right">Close</a>
                 </div>
             </div>
-        </footer>
+        </footer> -->
 
         <script>window.$ = window.jQuery = require('./../resources/js/jquery.min.js');</script>
         <script src="./../resources/js/bootstrap.min.js"></script>
