--- a/views/legal.html
+++ b/views/legal.html
@@ -49,13 +49,13 @@
             </div>
         </div>
 
-        <footer class="footer">
+        <!-- <footer class="footer">
             <div class="container-fluid">
                 <div class="row">
                     <p class="col-xs-10 text-muted">Graphic interface for ODAS library</p>
                     <a href="javascript:window.close()" class="col-xs-2 text-right">Close</a>
                 </div>
             </div>
-        </footer>
+        </footer> -->
     </body>
 </html>
