--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -221,3 +221,17 @@ body {
 .sphere-row {
     height: 60%;
 }
+
+
+/* PI SENSORS */
+#pi-sensors {
+    position: fixed;
+    bottom: 0;
+    right: 0;
+    height: 200px;
+    z-index: 99;
+    width: 400px;
+    border-style: solid;
+    border-width: 2px;
+    /* background-color: red; */
+}
