--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -232,6 +232,13 @@ body {
     z-index: 99;
     width: 400px;
     border-style: solid;
-    border-width: 2px;
+    border-width: 1px;
+    border-radius: 5px;
     /* background-color: red; */
+}
+
+#pi-status {
+    color: white;
+    padding: 3px;
+    border-radius: 5%;
 }
