--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -234,7 +234,7 @@ body {
     border-style: solid;
     border-width: 1px;
     border-radius: 5px;
-    /* background-color: red; */
+    background-color: white;
 }
 
 #pi-status {
