Added sensor reading app

--- a/views/live_data.html
+++ b/views/live_data.html
@@ -25,7 +25,7 @@
                 <!-- Pi IP input -->
                 <div id="pi-connect">
                     Sensor Device IP:<br>
-                    <input type="text" value="192.168.2.161" id="pi-ip"><input onclick="connectPi()" type="button" value="Connect" name="connect_sensor">
+                    <input type="text" value="" id="pi-ip"><input onclick="connectPi()" type="button" value="Connect" name="connect_sensor">
             
                 </div>
 
